<resources>
    <string name="app_name">Wms</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="name">Username:</string>
    <string name="username">Please input your name</string>
    <string name="passwd_login">Password:</string>
    <string name="password">Please input your password</string>
    <string name="signin">Sign In</string>
    <string name="select_merchant">Select Merchant</string>
    <string name="select_inbound_no">Select Inbound No.</string>
    <string name="scan">Scan Commodity</string>
    <string name="commodity_inbound">Commodity Inbound</string>
    <string name="scan_result">Scan Commodity: </string>
    <string name="scan_submit">Submit to Server</string>
    <string name="select_inbound_batch_no">Select Real Inbound No.</string>
    <string name="scanShelf">Scan Shelf Barcode:</string>
    <string name="scanBarcode">Scan Commodity Barcode:</string>
    <string name="scan_result_shelf">Your Shelf is: </string>
    <string name="scan_result_barcode">Scaned Commodity:</string>
    <string name="commodity_mount">Commodity Mound</string>
    <string name="mount_submit">Submit To Server</string>
    <string name="scanWave">Scan Wave/Order No.</string>
    <string name="scan_result_wave">Scanned Wave/Order No.</string>
    <string name="commodity_pickup">Commodity Pickup</string>
    <string name="scanOrder">Scan Order No.</string>
    <string name="scan_result_order">Scanned Order No.</string>
    <string name="commodity_outbound">Order Pack</string>
    <string name="to_scan">Please Scan Commodity</string>
    <string name="to_scan_shelf">Please Scan Shelf Barcode</string>
    <string name="to_scan_shelf_commodity">Please Scan Commodity</string>
    <string name="to_scan_wave">Please Scan Wave No./Order No.</string>
    <string name="to_scan_order">Pleae Scan Order No.</string>
</resources>
