<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".MainActivity">

    <include layout="@layout/include_titlebar"/>

    <Button
        android:id="@+id/btnInbound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_inbound"/>

    <Button
        android:id="@+id/btnMount"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_mount"/>

    <Button
        android:id="@+id/btnPickup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_pickup"/>

    <Button
        android:id="@+id/btnOutbound"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/commodity_outbound"/>

</LinearLayout>
