<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/white"
              android:orientation="vertical" >
    <include layout="@layout/include_titlebar"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/select_inbound_batch_no"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:minHeight="45dp">
        <Button
            android:id="@+id/btnScanShelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="12sp"
            android:text="@string/scanShelf"
            android:singleLine="false"
            android:height="45dp"
            android:width="320dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/scan_result_shelf"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:id="@+id/tv_scan_shelf"
            android:layout_width="fill_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:minHeight="45dp">
        <Button
            android:id="@+id/btnScanBarcode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="12sp"
            android:text="@string/scanBarcode"
            android:singleLine="false"
            android:height="45dp"
            android:width="320dp"/>
    </LinearLayout>



    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/scan_result_barcode"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <TextView
            android:id="@+id/tv_scan_barcode"
            android:layout_width="fill_parent"
            android:textSize="18sp"
            android:textColor="@android:color/black"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:orientation="horizontal"
        android:minHeight="45dp">
        <Button
            android:id="@+id/btnSubmit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:textSize="12sp"
            android:text="@string/mount_submit"
            android:singleLine="false"
            android:height="45dp"
            android:width="320dp"/>
    </LinearLayout>

</LinearLayout>