<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/white"
              android:orientation="vertical" >
    <include layout="@layout/include_titlebar"/>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/select_merchant"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner1"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/select_inbound_no"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/spinner2"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical"
        android:minHeight="45dp"
        android:layout_marginTop="2dp"
        android:layout_marginBottom="2dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:textColor="#2c3e50"
            android:text="@string/scan_result"
            android:textSize="14sp"
            android:layout_gravity="center"
            android:autoText="false"
            android:focusable="false"
            android:singleLine="false"
            android:width="80dp"
            android:maxWidth="80dp"
            android:gravity="center_vertical|left"
            />
        <EditText
            android:id="@+id/et_scan_result"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:layout_marginLeft="10dp"
            android:singleLine="true"
            android:hint="@string/to_scan"
            android:textColor="@color/bg_gray_dark"
            android:textColorHint="@color/bg_gray_dark"
            style="@style/my_edittext_style"
            android:textSize="16sp"
            android:gravity="center_vertical"
            android:inputType="text"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <View android:layout_height="1dp" android:background="@color/bg_gray_dark" android:layout_width="fill_parent"></View>
    </LinearLayout>


</LinearLayout>